philly-311-citywide-meta/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <label>Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PhillyRising_Community__c</fullName>
        <description>This will track the PhillyRising community being targeted</description>
        <inlineHelpText>This will track the PhillyRising community being targeted.</inlineHelpText>
        <label>PhillyRising Community</label>
        <picklist>
            <picklistValues>
                <fullName>Elmwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frankford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haddington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartranft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kensington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingsessing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawncrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penrose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt. Breeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Hugh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strawberry Mansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swampoodle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Toolbox__c</fullName>
        <description>These are the specific activities that the city is using to promote citizen engagement in the targeted areas</description>
        <inlineHelpText>These are the specific activities that the city is using to promote citizen engagement in the targeted areas</inlineHelpText>
        <label>Toolbox Process</label>
        <picklist>
            <picklistValues>
                <fullName>Citizen Engagement Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large-Scale Volunteer Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP Mural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alleyway Cleaning Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Violence Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Liaison Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Boot Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of Life Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Leader Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Fair / Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream Drive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>responded__c</fullName>
        <formula>if(NumberSent!=0,(NumberOfResponses / NumberSent),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>responded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>